# biathlon

./: .gitignore  LICENSE  README.md  pyproject.toml
src/biathlon/: __init__.py  api.py  cli.py  constants.py  formatting.py  markdown.py  utils.py
src/biathlon/commands/: __init__.py  athlete.py  ceremony.py  cumulate.py  events.py  records.py  relay.py  results.py  scores.py  seasons.py  shooting.py
tests/: __init__.py  test_constants.py  test_formatting.py  test_utils.py
