[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biathlon"
version = "1.1.0"
description = "CLI for exploring IBU biathlon results from biathlonresults.com"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
keywords = ["biathlon", "cli", "ibu", "sports", "results"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/thbtmntgn/biathlon"
Repository = "https://github.com/thbtmntgn/biathlon"
Issues = "https://github.com/thbtmntgn/biathlon/issues"

[project.scripts]
biathlon = "biathlon.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
